# haikubebot

./: .env.example  .gitignore  1  CLAUDE.md  Procfile  README.md  config.json  db_service.py  haikubot.py  init_db.py  pyproject.toml  sync_data.py
handlers/: __init__.py  haiku_handler.py  message_handler.py  query_handler.py  response_handler.py
supabase/: config.toml
supabase/migrations/: 20250320125532_create_tables.sql  20250320125533_add_foreign_key.sql  20250320125534_alter_messages_id.sql  20250415194000_add_isbot_to_users.sql  20250417171000_add_haiku_source_ids_to_messages.sql  20250417191000_add_tg_id_to_messages.sql
utils/: __init__.py  config.py  openai_client.py  prompts.py
