[tool.poetry]
name = "haikubot"
version = "0.1.0"
description = ""
authors = ["Valeriy Pogorelov <valeriy.pogorelov@together.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.scripts]
start-bot = "haikubot:main"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.1"
openai = "^1.57.0"
python-telegram-bot = "^21.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
